[package]
name = "simdeez"
version = "1.0.8"
authors = ["Jack Mott <jack.mott@gmail.com>"]
description = "SIMD library to abstract over different instruction sets and widths"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/simdeez/"
readme = "README.md"
keywords = ["SIMD", "avx2", "sse", "performance", "no_std"]
repository = "https://github.com/jackmott/simdeez"
categories = ["hardware-support", "science", "game-engines"]
edition = "2018"


[features]
default = ["no_std"]
sleef = ["sleef-sys"]
no_std = ["dep:libm"]

[dependencies]
paste = "1.0.11"
# To build this, we need nightly, cmake installed, and clang dlls in the clang dll path
sleef-sys = { version = "0.1.2", optional = true }
cfg-if = "1.0.0"
libm = { version = "0.2.6", optional = true }


[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "sseby2"
harness = false

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "sum2"
harness = false
