[package]
name = "simdeez"
version = "1.0.8"
authors = ["Jack Mott <jack.mott@gmail.com>"]
description = "SIMD library to abstract over different instruction sets and widths"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/simdeez/"
readme = "README.md"
keywords = ["SIMD", "avx2", "sse", "performance", "no_std"]
repository = "https://github.com/jackmott/simdeez"
categories = ["hardware-support", "science", "game-engines"]
edition = "2018"

[lib]
doctest = false

[features]
default = []
sleef = ["sleef-sys"]
no_std = ["dep:libm"]
unsafe_inner_access = []

[dependencies]
paste = "1.0.11"
# To build this, we need nightly, cmake installed, and clang dlls in the clang dll path
sleef-sys = { version = "0.1.2", optional = true }
cfg-if = "1.0.0"
libm = { version = "0.2.6", optional = true }


[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"