[package]
name = "simdeez"
version = "2.0.0-dev3"
authors = ["Jack Mott <jack.mott@gmail.com>", "Arduano"]
description = "SIMD library to abstract over different instruction sets and widths"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/simdeez/"
readme = "README.md"
keywords = ["SIMD", "avx2", "sse", "performance", "no_std"]
repository = "https://github.com/jackmott/simdeez"
categories = ["hardware-support", "science", "game-engines"]
edition = "2021"

[lib]
doctest = true

[features]
default = []
sleef = ["sleef-sys"]
no_std = ["dep:libm"]

[dependencies]
paste = "1.0.15"
# To build this, we need nightly, cmake installed, and clang dlls in the clang dll path
sleef-sys = { version = "0.1.2", optional = true }
cfg-if = "1.0.0"
libm = { version = "0.2.11", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies.criterion]
version = "0.5.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies.criterion]
version = "0.5.1"
default-features = false
# Default features, excluding `rayon` which isn't supported on WASM
features = ["plotters", "cargo_bench_support"]

[[bench]]
name = "numparse"
harness = false
